--- a/tanker-web/src/main/webapp/html/views/index.html
+++ b/tanker-web/src/main/webapp/html/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>mirakl-multiplex</title>
+    <title>Tanker.io</title>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 </head>
